# JobJob

./: .env.example  AGENTS.md  README.md  application  cv-template.tex  job_json_database.py  jobs_database.json  reed_job_data.py
.github/: copilot-instructions.md
backend/: .gitignore  APPLY_API_REQUEST_HEADERS_INTEGRATION.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: definitions.py  hooks.py  orchestrator.py
backend/app/api/: streaming.py
backend/app/api/routes/: applications.py  chat.py  documents.py  jobs.py  profile.py
backend/app/models/: __init__.py  application.py  job.py  user_profile.py
backend/app/services/: session_manager.py
backend/app/tools/: document_tools.py  profile_tools.py  reed_tools.py  request_headers.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/applications/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: DeliveryPanel.tsx  InfoPanel.tsx  JobsPanel.tsx
frontend/src/components/apply/: StatusChip.tsx
frontend/src/components/chat/: CVUploadZone.tsx  ChatInput.tsx  ChatWindow.tsx
frontend/src/components/jobs/: JobCard.tsx  JobFilters.tsx  MatchBadge.tsx
frontend/src/lib/: api.ts
frontend/src/lib/hooks/: useChat.ts
static/: index.html  package-lock.json  package.json
static/src/: App.css  App.tsx  index.css  speech.d.ts
