[project]
name = "jobjob-backend"
version = "0.1.0"
description = "JobJob — AI-Powered Automated Job Application Agent (Backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "weasyprint>=63.0",
    "anthropic>=0.43.0",
    "sse-starlette>=2.2.0",
    "aiofiles>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]
